# Andspace

./: .gitignore  README.md  SECURITY.md  STACK_DECISION.md  index.html  package.json  pnpm-lock.yaml
docs/: AI_HANDOFF.md  ANDSPACE_RULES.md  BENCHMARKS.md  BENCHMARK_RUNBOOK.md  COMMAND_GUARD.md  COMMAND_PALETTE.md  DEMO_VIDEO_SCRIPT.md  DOGFOOD_CHECKLIST.md  FILE_ACTIONS.md  GIT_CHANGES.md  HOMEBREW_CASK.md  KNOWN_ISSUES.md  LAUNCH_ASSETS_CHECKLIST.md  LAUNCH_COPY.md  LOCAL_PREVIEW.md  MACOS_SIGNING_NOTARIZATION.md  PHASE_0.md  PREFERENCES.md  PRIVACY.md  PROJECT_SIDEBAR.md  RELEASE_NOTES_v0.1.0-alpha.2.md  RELEASE_NOTES_v0.1.0-alpha.3.md  RELEASE_NOTES_v0.1.0-alpha.4.md  RELEASE_NOTES_v0.1.0-alpha.5.md  RELEASE_NOTES_v0.1.0-alpha.6.md  RELEASE_NOTES_v0.1.0-alpha.7.md  RELEASE_NOTES_v0.1.0-alpha.8.md  RELEASE_NOTES_v0.1.0-alpha.9.md  RELEASE_NOTES_v0.1.0-beta.1.md  RELEASE_NOTES_v0.1.0-beta.2.md  SECURITY_NOTES.md  SERVERS.md  SHELL_INTEGRATION.md  SHELL_PROFILES.md  TERMINAL_COMPARISON_BENCHMARK.md  V0_1.md  V0_1_RELEASE_CHECKLIST.md  VERIFY_DOWNLOAD.md  WORKSPACE_PERSISTENCE.md
scripts/: benchmark.sh  idle-power.py  package-alpha.sh  terminal-benchmark.py  test-local-preview.mjs  test-pane-navigation.mjs  test-preferences.mjs  test-server-detection.mjs  test-update-check.mjs  test-workspace-persistence.mjs  verify-command-guard-zsh.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/shell-integration/: andspace.zsh  bash.placeholder  fish.placeholder
src-tauri/shell-integration/zdotdir/: .zprofile  .zshenv  .zshrc
src-tauri/src/: ai_handoff.rs  command_guard.rs  commands.rs  file_actions.rs  git_status.rs  main.rs  preferences.rs  project_sidebar.rs  pty.rs  rules.rs  shell_setup.rs  tool_resolver.rs  workspace.rs
(+46 files in other folders)
